fix: hide x axis overflow on mobile

--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+@media (max-device-width: 812px) {
+  html, body {
+    overflow-x: hidden;
+  }
+  body {
+    position: relative;
+  }
+}
+
 body {
   font-family: 'Lato', sans-serif;
   font-weight: 900;
